packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@import './pdfjs_web_mixins';
@import '../../vars';
@import './mixins';

.#{$prefix}--document-preview-pdf-viewer {
  position: relative;
  @include pdfjsTextLayer;
}

.#{$prefix}--document-preview-pdf-viewer--canvas {
  transform-origin: left top 0px;
}

.#{$prefix}--document-preview-pdf-viewer--text {
  transform-origin: left top 0px;
}

.#{$prefix}--document-preview-pdf-viewer-highlight {
  position: absolute;
  transform-origin: left top 0px;
  top: 0;
  left: 0;
}

.#{$prefix}--document-preview-pdf-viewer-highlight--item {
  position: absolute;
  opacity: 0.3;
  background: darken($highlight, 30%);
}

.#{$prefix}--document-preview-pdf-viewer-highlight--item--active {
  position: absolute;
  opacity: 0.5;
  background: darken($highlight, 40%);
}

